
$Id: changes.txt,v 1.75 2006/05/15 18:51:25 qqshka Exp $

----
MVDSV v0.19.22-CVS build 23?? (2006.05.??)
[server]

* qqshka <qqshka@users.sourceforge.net>
- switching GAME_API_VERSION to 9.
  Only one change, added GAME_CLIENT_SAY, so now qvm mods can handle say/say_team.
- For developers only: now qvm mods can get client state via
  trap_infokey( int edn, "*state", char *valbuff, int sizebuff ).
  Possible states: "free", "zombie", "preconnected", "connected", "spawned", "unknown".
  So u can spot not yet connected clients. Personally, i'm using this in KTX for
  /klist or /fkick. ktpro do this via parsing output of server /status command.
  I'm dislike ktpro way here.

* oldman <oldmanuk@users.sourceforge.net>
- added VWEP support (from ZQuake)
- improved MacOS X/Darwin support

* VVD <vvd0@users.sourceforge.net>
- removed cvar sv_old_status_for_ktpro - not needed after "improved connection algorithm..."
- improved connection algorithm: if client core dumped, then allow to reuse slot (EXPERIMENTAL)
- improved status command output with ktpro in server console - always write new status
- disabled general-protection-fault window box on Win32 if there are command line options
  "-noerrormsgbox" or "-d"
(Thanks to schm)
- added new value for sv_forcespec_onfull
  2 - same as 1 (look at 0.19.20-develop changes) if player's "svf" userinfo key == 1
  changed default value from 0 to 2
  example: setinfo svf 1
- bugfix from 0.19.20-develop: didn't added sv_forcespec_onfull
  and behavior was like with value 1 (careless mistake)


----
MVDSV v0.19.20-develop build 2320 (2006.04.28)
- replaced all:
    atoi -> Q_atoi
    atof -> Q_atof
- bugfix from 0.179b: SunOS on SPARC-64 didn't determine big endian
(Thanks to Krok)
- for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
  to bothtools.c and bothdefs.h
[server]
- new cvar sv_forcespec_onfull:
  0 - old connect algorithm, i.e you got full connect message and continue trying connect