@@ -16,11 +16,10 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  
-	$Id: mathlib.c,v 1.6 2006/03/23 14:10:35 disconn3ct Exp $
+	$Id: mathlib.c,v 1.7 2006/05/23 14:47:54 vvd0 Exp $
 */
 // mathlib.c -- math primitives
 
-#include <math.h>
 #include "qwsvdef.h"
 
 
