@@ -16,11 +16,10 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  
-	$Id: pr_cmds.c,v 1.21 2006/05/01 22:37:43 oldmanuk Exp $
+	$Id: pr_cmds.c,v 1.22 2006/05/23 14:47:54 vvd0 Exp $
 */
 
 #include "qwsvdef.h"
-#include <time.h>
 
 #define	RETURN_EDICT(e) (((int *)pr_globals)[OFS_RETURN] = EDICT_TO_PROG(e))
 #define	RETURN_STRING(s) (((int *)pr_globals)[OFS_RETURN] = PR_SetString(s))
