@@ -15,14 +15,10 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  
-	$Id: main.c,v 1.14 2006/05/02 14:13:51 disconn3ct Exp $
+	$Id: main.c,v 1.15 2006/05/23 14:47:54 vvd0 Exp $
 */
 
 #include "defs.h"
-#ifdef _WIN32
-#include <malloc.h>
-#include <float.h>
-#endif
 
 int memsize, membase;
 int	fps;
