@@ -15,13 +15,12 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  
-	$Id: qwz.c,v 1.6 2006/03/27 22:55:10 disconn3ct Exp $
+	$Id: qwz.c,v 1.7 2006/05/23 14:47:54 vvd0 Exp $
 */
 
 #include "defs.h"
 
 #ifdef _WIN32
-#include <process.h>
 
 static HANDLE	hQizmoProcess = NULL;
 static DWORD ExitCode;
