@@ -16,12 +16,8 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  
-	$Id: sv_main.c,v 1.59 2006/05/15 15:11:14 vvd0 Exp $
+	$Id: sv_main.c,v 1.60 2006/05/23 14:47:54 vvd0 Exp $
 */
-
-#if defined(__linux__) || defined(__FreeBSD__) || defined(sun) || defined(__GNUC__) || defined(__APPLE__)
-#include <sys/time.h>
-#endif
 
 #include "qwsvdef.h"
 
@@ -2815,12 +2811,15 @@ void SV_ExtractFromUserinfo (client_t *cl, qbool namechanged)
 
 qbool OnChange_sysselecttimeout_var (cvar_t *var, char *value)
 {
-	extern struct timeval select_timeout;
 	int t = Q_atoi(value);
 	if (t <= 1000000 && t >= 10)
 	{
-		select_timeout.tv_sec  = t / 1000000;
-		select_timeout.tv_usec = t - select_timeout.tv_sec;
+		select_timeout.tv_sec  =  t / 1000000;
+#if defined(__FreeBSD__) && defined(KQUEUE)
+		select_timeout.tv_nsec = (t - select_timeout.tv_sec) * 1000;
+#else
+		select_timeout.tv_usec =  t - select_timeout.tv_sec;
+#endif
 		return false;
 	}
 	Sys_Printf("WARNING: sys_select_timeout can't be less then 10 (10 microseconds) and more then 1 000 000 (1 second).\n");
